# ruff

./: Cargo.toml
.github/workflows/: build-binaries.yml  build-docker.yml  ci.yaml  memory_report.yaml  mypy_primer.yaml  publish-docs.yml  sync_typeshed.yaml  ty-ecosystem-analyzer.yaml  ty-ecosystem-report.yaml  typing_conformance.yaml
crates/red_knot/: Cargo.toml
crates/red_knot/src/: db.rs  lint.rs  main.rs  module.rs  workspace.rs
crates/red_knot/tests/: check.rs  file_watching.rs
crates/red_knot_module_resolver/src/: db.rs  lib.rs  module.rs  path.rs  resolver.rs  testing.rs  typeshed.rs
crates/red_knot_python_semantic/: Cargo.toml
crates/red_knot_python_semantic/src/: db.rs  lib.rs  module.rs  module_name.rs  program.rs  semantic_index.rs  semantic_model.rs  stdlib.rs  symbol.rs  types.rs
crates/red_knot_test/src/: assertion.rs  diagnostic.rs  lib.rs  matcher.rs
crates/red_knot_typeshed_resolver/: Cargo.toml
crates/red_knot_typeshed_resolver/src/: constants.rs  lib.rs  typeshed_vendored.rs  typeshed_versions.rs  versions.rs
crates/red_knot_vendored/knot_extensions/: knot_extensions.pyi
crates/ruff/: Cargo.toml
crates/ruff/src/: linter.rs  test.rs
crates/ruff_benchmark/benches/: red_knot.rs
crates/ruff_cli/: Cargo.toml
crates/ruff_cli/src/: cache.rs  diagnostics.rs
crates/ruff_db/: Cargo.toml
crates/ruff_db/src/: file_system.rs  lib.rs  module_name.rs  program.rs  vfs.rs  (+3 more)
crates/ruff_shrinking/: Cargo.toml
python/py-fuzzer/: fuzz.py
scripts/: formatter_progress.sh  update_ambiguous_characters.py
scripts/fuzz-parser/: fuzz.py
(+501 files in other folders)
